<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".accounting.login.LoginActivity">
    <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/grabteacher_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appCompatImageView"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/student_group_plaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:id="@+id/appCompatImageView2"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:padding="@dimen/space_text_with_parent"
            android:drawableLeft="@drawable/ic_user_login"
            android:theme="@style/MyEditTextTheme"
            android:background="@drawable/edt_login_rounded"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user_login"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.503" android:hint="@string/enter_username"
            android:importantForAutofill="no" android:inputType="" tools:targetApi="o"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:padding="@dimen/space_text_with_parent"
            android:drawableLeft="@drawable/ic_password_login_left"
            android:theme="@style/MyEditTextTheme"
            android:background="@drawable/edt_login_rounded"
            android:drawableStart="@drawable/ic_password_login_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_height="wrap_content"
            android:id="@+id/editText" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" android:layout_marginTop="12dp"
            android:hint="@string/enter_password" android:inputType="" android:autofillHints=""
            android:importantForAutofill="no" tools:targetApi="o"/>
    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/btn_login_rounded"
            android:layout_width="215dp"
            android:layout_height="39dp"
            android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"/>
    <ImageView
            android:layout_marginEnd="13dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_facebook"
            android:id="@+id/imageButton"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
    <ImageView
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_google"
            android:id="@+id/imageButton2"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_twitter"
            android:id="@+id/imageButton3"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"/>
    <ImageView
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_instagram"
            android:id="@+id/imageButton4"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"/>
    <TextView
            android:text="@string/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.192"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.622"
            android:layout_marginTop="16dp"/>
    <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier" app:barrierDirection="top"/>
    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group"/>


</androidx.constraintlayout.widget.ConstraintLayout>